--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,9 @@
-theme: jekyll-theme-minimal
+theme: jekyll-theme-text
 title: Octocat's homepage
 description: Bookmark this to keep an eye on my project updates!
+navbar:
+  links:
+    - title: "Home"
+      url: "/"
+    - title: "About"
+      url: "/about/"
